# project-aspen

./: README.md
backend/: pyproject.toml
backend/src/aspen_backend/: app.py  async_test_reranker.py  reranker.py  reranker2.py  sync_test_reranker.py  test_reranker.py
backend/src/aspen_backend/api_testing/: test_aspen_api.py
backend/src/aspen_backend/clients/: __init__.py  aspen_request.py  ollama_llm.py  reranker.py
backend/src/aspen_backend/middleware/: __init__.py  aspen_streaming_api.py
backend/src/aspen_core/: evals.py  test.py
backend/src/aspen_core/device/: utils.py
backend/src/aspen_core/utils/bing/: base.py  config.py
