[tool.poetry]
name = "aspen-backend"
version = "0.1.0"
description = "Backend service for Project Aspen."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy = "^2.5.20"
transformers = "^4.46.1"
huggingface = "^0.0.1"
litserve = "^0.2.3"
pydantic = "^2.9.2"
litgpt = "^0.5.3"
sentence-transformers = "^3.2.1"
bitsandbytes = "^0.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
