[tool.poetry]
name = "aspen-backend"
version = "0.1.0"
description = "Backend service for Project Aspen."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "aspen_backend", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
dspy = "^2.5.20"
transformers = "^4.46.1"
huggingface = "^0.0.1"
litserve = "^0.2.3"
pydantic = "^2.9.2"
sentence-transformers = "^3.2.1"
accelerate = "^1.0.1"
huggingface-hub = "^0.26.2"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
